# rust-tauri

./: .editorconfig  .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  test.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src/components/: app.tsx  path-input.tsx  path-selector.tsx
src/components/ui/: form.tsx  spinner.tsx
src/components/ui/form/: constants.tsx  index.tsx
src/components/ui/form/components/: error-icon.tsx  icon.tsx
src/components/ui/form/elements/: button.tsx  checkbox.tsx  field.tsx  input.tsx  select.tsx  textarea.tsx
src/css/: app.css
